--- a/src/components/navigation/header/header.scss
+++ b/src/components/navigation/header/header.scss
@@ -10,4 +10,5 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
