--- a/src/components/navigation/header/logo/logo.scss
+++ b/src/components/navigation/header/logo/logo.scss
@@ -5,9 +5,10 @@
   margin: 0;
   align-items: center;
   justify-content: space-between;
+  height: 100%;
   &_icon {
-    width: 64px;
-    height: 64px;
+    width: 4rem;
+    height: 4rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,5 +17,6 @@
     font-weight: 300;
     color: var.$paper-yellow;
     font-style: normal;
+    margin: 0;
   }
 }
