--- a/src/components/navigation/header/userPill/pill.scss
+++ b/src/components/navigation/header/userPill/pill.scss
@@ -2,7 +2,7 @@
 .page_frame_header_pill {
   background-color: var.$paper-yellow;
   display: flex;
-  width: clamp(300px, 26%, 360px);
+  width: clamp(150px, 26%, 360px);
   align-items: center;
   justify-content: space-between;
   border-radius: 50px 0px 0px 50px;
@@ -11,6 +11,12 @@
   &_content {
     width: 100%;
     height: 100%;
+    &_login {
+      text-align: center;
+      vertical-align: middle;
+      text-decoration: underline;
+      height: 100%;
+    }
     &_profile {
       display: flex;
       justify-content: space-between;
