--- a/src/components/navigation/header/userPill/pill.scss
+++ b/src/components/navigation/header/userPill/pill.scss
@@ -12,9 +12,9 @@
     width: 100%;
     height: 100%;
     &_login {
-      text-align: center;
-      vertical-align: middle;
-      text-decoration: underline;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       height: 100%;
     }
     &_profile {
