--- a/src/components/navigation/header/userPill/pill.scss
+++ b/src/components/navigation/header/userPill/pill.scss
@@ -15,6 +15,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      text-decoration: underline;
+      cursor: pointer;
+
       height: 100%;
     }
     &_profile {
