--- a/src/components/pageFrame/pageFrame.scss
+++ b/src/components/pageFrame/pageFrame.scss
@@ -5,4 +5,9 @@
     width: 100%;
     background: var.$background;
   }
+  &_main {
+    padding: 4rem 0 0 4rem;
+    width: calc(100% - 4rem);
+    height: calc(100% - 4rem);
+  }
 }
