--- a/src/components/navigation/header/header.scss
+++ b/src/components/navigation/header/header.scss
@@ -10,5 +10,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 99;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
