--- a/src/components/navigation/menu/nav.scss
+++ b/src/components/navigation/menu/nav.scss
@@ -10,6 +10,9 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     transition: width 200ms ease;
     z-index: 97;
+    &_hidden {
+      display: none;
+    }
     &_list {
       width: 100%;
       height: 100%;
