--- a/src/components/pageFrame/pageFrame.scss
+++ b/src/components/pageFrame/pageFrame.scss
@@ -9,5 +9,9 @@
     padding: 4rem 0 0 4rem;
     width: calc(100% - 4rem);
     height: calc(100% - 4rem);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
 }
