ss-21 fixed some bugs. start ed ss-26

--- a/src/components/pageFrame/pageFrame.scss
+++ b/src/components/pageFrame/pageFrame.scss
@@ -13,5 +13,10 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    &_startPage {
+      @extend .page_frame_main;
+      width: 100vw;
+      padding-left: 0;
+    }
   }
 }
