--- a/src/components/mainPage/mainPage.scss
+++ b/src/components/mainPage/mainPage.scss
@@ -16,8 +16,8 @@
     color: #283618;
     max-width: 90%;
     display: flex;
+    flex-direction: row;
     margin: 1rem 1rem;
     height: auto;
-    flex-wrap: wrap;
   }
 }
