ss-26 forgot register button. Added it

--- a/src/components/registerPage/registration.scss
+++ b/src/components/registerPage/registration.scss
@@ -1,5 +1,12 @@
 @use "../../variables" as var;
-.page_mainPage {
+@use "../mainPage/mainPage.scss";
+.page_registerPage {
+  &_paper {
+    @extend .page_mainPage_paper;
+  }
+  &_icon {
+    @extend .page_mainPage_icon;
+  }
   &_h1 {
     margin: 8px 0;
     color: var.$font-green;
@@ -9,5 +16,9 @@
     margin: 0 0 8px 0;
     color: var.$biege;
     font-weight: 300;
+  }
+
+  &_button {
+    @extend .page_mainPage_button;
   }
 }
