--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,7 @@
   display: flex;
   margin: 1rem 1rem;
   height: auto;
+  transition: all 300ms;
   &_column {
     @extend .page_paper;
     flex-direction: column;
