--- a/src/components/pageFrame/pageFrame.scss
+++ b/src/components/pageFrame/pageFrame.scss
@@ -1,7 +1,7 @@
 @use "../../variables" as var;
 .page_frame {
   &_bg {
-    height: 100%;
+    height: fit-content;
     width: 100%;
     background: var.$background;
   }
