--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@ html {
   height: 100%;
   width: 100vw;
   min-height: 100vh;
+  background: var.$background;
 }
 :root {
   color: var.$font-green;
