--- a/src/components/mainPage/mainPage.scss
+++ b/src/components/mainPage/mainPage.scss
@@ -1,3 +1,4 @@
+@use "../../variables" as var;
 .page_mainPage {
   &_icon {
     aspect-ratio: 1 / 1;
@@ -9,5 +10,9 @@
     &:hover {
       background-color: hsl(74, 32%, 24%);
     }
+  }
+  &_h1 {
+    font-size: 1.5rem;
+    color: var.$font-green;
   }
 }
