--- a/src/components/Exchange/ExchangeCard/Statuses/Selection.scss
+++ b/src/components/Exchange/ExchangeCard/Statuses/Selection.scss
@@ -1,20 +1,11 @@
-.chooseBtn {
-  opacity: 0;
-  transition: 0.3s;
-}
-
-.card:hover .chooseBtn {
-  opacity: 1;
-}
-
 .card {
-  box-shadow: none;
+  cursor: pointer;
   transition: 0.3s;
 }
 
 .card:hover {
-  transform: translateY(-4px);
   box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 20%),
               0px 8px 10px 1px rgb(0 0 0 / 14%),
               0px 3px 14px 2px rgb(0 0 0 / 12%);
+  transform: translateY(-4px);
 }
